# MC-Chess-Engine

./: CMakeLists.txt  Doxyfile  README.md  defs.h  main.cpp
board/: board.cpp  board.h  board_data.cpp  board_data.h
build-vs2019/: CMakeCache.txt  MC-Chess-Engine.sln  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
docs/: _r_e_a_d_m_e_8md.html  annotated.html  attack_8cpp.html  attack_8cpp.js  attack_8cpp__incl.map  attack_8cpp__incl.md5  attack_8cpp_a36ea46ff61e0738a61f70dcf90b5178b_icgraph.map  attack_8cpp_source.html  attack_8h.js  attack_8h__dep__incl.md5  attack_8h__incl.map  bitboard_8h.js  bitboard_8h__dep__incl.map  bitboard_8h__dep__incl.md5  bitboard_8h__incl.md5  bitboards_8cpp.js  bitboards_8cpp__incl.map  bitboards_8cpp__incl.md5  bitboards_8cpp_source.html  board_8cpp__incl.md5  board_8cpp_a27f071824f45c724e8ddd02c72b39871_icgraph.map  board_8cpp_aad9cde553dadb6876eb29b43c8f66b08_cgraph.md5  board_8cpp_ac392f2ff8c0f063425f09403c43d4cc5_icgraph.md5  board_8cpp_addbaf4fbab51f8032e0e7aabbffeab96_icgraph.md5  board_8cpp_source.html  board_8h.js  board_8h__dep__incl.map  board_8h_a27f071824f45c724e8ddd02c72b39871_cgraph.map  board_8h_aa79d9c29f4add58463f9a03d17085132_cgraph.md5  board_8h_aad9cde553dadb6876eb29b43c8f66b08_cgraph.map  board_8h_aad9cde553dadb6876eb29b43c8f66b08_icgraph.map  board_8h_ac392f2ff8c0f063425f09403c43d4cc5_cgraph.md5  board_8h_addbaf4fbab51f8032e0e7aabbffeab96_cgraph.md5  board_8h_addbaf4fbab51f8032e0e7aabbffeab96_icgraph.map  board_8h_ae6514fecbc8e1ef2e0ef649296ad8163_icgraph.md5  board_8h_source.html  board__data_8cpp__incl.map  (+181 more)
(+708 files in other folders)
